--- a/TypenSneek/css/index.css
+++ b/TypenSneek/css/index.css
@@ -1,14 +1,8 @@
-body{
-    background: #0049B7 ;
+body {
+);
+    /*background-color: #cccccc;*/
 }
-.navbar{
-    color: #00DDFF;
+
+body {
+    background-image: url("../img/luke-chesser-B_oL3jEt5L4-unsplash.jpg");
 }
-/*<!--*/
-/*kleur gebruiken*/
-/*Yass Queen: #ff1d58*/
-/*Sister Sister: #f75990*/
-/*Crown Yellow: #fff685*/
-/*Blue Light: #00DDFF*/
-/*Brutal Blue: #0049B7*/
-/*-->*/
