--- a/TypenSneek/stylecursus.css
+++ b/TypenSneek/stylecursus.css
@@ -35,6 +35,8 @@
     margin-bottom: 1rem;
     margin-left: calc(1rem + 2px);
     margin-right: calc(1rem + 2px);
+    font-weight: bold;
+    font-size: 24px;
   }
   
   .quote-input {
