--- a/TypenSneek/stylecursus.css
+++ b/TypenSneek/stylecursus.css
@@ -1,19 +1,21 @@
 body {
-  background-color: #101820FF;
-  color: white;
+  background-color: white;
+  color: black;
   text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 10%;
 }
 
 .heading {
   margin-bottom: 20px;
   font-size: 3rem;
-  color: white;
+  color: black;
 }
 
 .header {
@@ -23,9 +25,9 @@ body {
 
 .timer, .errors,
 .accuracy, .cpm, .wpm {
-  background-color: #FEE715FF;
-  height: 60px;
-  width: 70px;
+  background-color: #e6f0ff;
+  height: 70px;
+  width: 80px;
   margin: 8px;
   padding: 12px;
   border-radius: 20%;
@@ -49,15 +51,17 @@ body {
 }
 
 .quote {
-  background-color: #FEE715FF;
+  background-color: #e6e6e6;
   font-size: 1.5rem;
+  font-weight: bold;
   margin: 10px;
   padding: 25px;
   box-shadow: black 5px 8px 5px;
+  width: 40%;
 }
 
 .input_area {
-  background-color: #f5f5c6;
+  background-color: #e6f0ff;
   height: 80px;
   width: 40%;
   font-size: 1.5rem;
@@ -74,7 +78,7 @@ body {
 }
 
 .correct_char {
-  color: darkgreen;
+  color: green;
 }
 
 .restart_btn {
