--- a/TypenSneek/stylecursus.css
+++ b/TypenSneek/stylecursus.css
@@ -4,7 +4,10 @@ body {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+a{
+  text-decoration: none;
+  color: black;
+}
 .container {
   display: flex;
   flex-direction: column;
