--- a/TypenSneek/style.css
+++ b/TypenSneek/style.css
@@ -1,3 +1,9 @@
+body{
+  background-image: url("img/back.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .masthead {
   height: 100vh;
   min-height: 500px;
