--- a/TypenSneek/stylecursus.css
+++ b/TypenSneek/stylecursus.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color:#ccffff;
   color: black;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -19,6 +19,7 @@ a{
   margin-bottom: 20px;
   font-size: 3rem;
   color: black;
+  font-weight: bold;
 }
 
 .header {
@@ -28,7 +29,7 @@ a{
 
 .timer, .errors,
 .accuracy, .cpm, .wpm {
-  background-color: #e6f0ff;
+  background-color: #8ac246;
   height: 70px;
   width: 80px;
   margin: 8px;
@@ -54,7 +55,7 @@ a{
 }
 
 .quote {
-  background-color: #e6e6e6;
+  background-color: #fca62a;
   font-size: 1.5rem;
   font-weight: bold;
   margin: 10px;
@@ -64,7 +65,7 @@ a{
 }
 
 .input_area {
-  background-color: #e6f0ff;
+  background-color: #8ac246;
   height: 80px;
   width: 40%;
   font-size: 1.5rem;
@@ -86,7 +87,7 @@ a{
 
 .restart_btn {
   display: none;
-  background-color: #326765;
+  background-color: #fca62a;
   font-size: 1.5rem;
   padding: 10px;
   border: 0px;
@@ -99,7 +100,7 @@ a{
   align-items: center;
   width: 40%;
   padding: 10px;
-  background-color: white;
+  background-color: #ccffff;
   
 }
 
